vencord/Colorfull.css
/* X Button Red */
.winButton_c38106:nth-of-type(3):hover::before {
  background-color: rgb(255, 0, 0) !important;
}
/* Plain Folder Icon Size Pastel */
.expandedFolderIconWrapper__48112 svg {
  display: none;
}
.expandedFolderIconWrapper__48112::after,
.closedFolderIconWrapper__48112::after {
  content: "";
  background-color: #fff;
  width: 24px;
  height: 24px;
  position: absolute;
  clip-path: path("M20 7H12L10.553 5.106C10.214 4.428 9.521 4 8.764 4H3C2.447 4 2 4.447 2 5V19C2 20.104 2.895 21 4 21H20C21.104 21 22 20.104 22 19V9C22 7.896 21.104 7 20 7Z");
  transition: opacity 0.2s ease;
}
.closedFolderIconWrapper__48112:hover::after {
  opacity: 0;
}
.closedFolderIconWrapper__48112 > .guildIcon__48112 {
  opacity: 0.5;
  filter: blur(2px);
  transition: opacity 0.2s ease, filter 0.2s ease !important;
}
.closedFolderIconWrapper__48112:hover > .guildIcon__48112 {
  opacity: 1;
  filter: blur(0px);
}
.theme-dark .folder__48112[aria-expanded="false"] {
  background-color: #000000;
}
.theme-light .folder__48112[aria-expanded="false"] {
  background-color: #777777;
}

/* Mark As Read */
button.barButtonAlt__0f481  {
    background-color: #fc868600 !important; /* button color */
    color: white !important; /* text color */
}
button.barButtonAlt__0f481:hover {
    background-color: var(--mc) !important;
}


/* Button Colors */
.wrapper__6e9f8:hover .childWrapper__6e9f8, .wrapper__6e9f8.selected__6e9f8 .childWrapper__6e9f8  {
  background: var(--mc);
}
.circleIconButton__5bc7e:hover {
  background-color: var(--mc) !important;
}
.visual-refresh .tabBar__133bf:hover .addFriend__133bf:hover.addFriend__133bf:hover.addFriend__133bf:hover {
    background-color: var(--mc) !important;
}
.visual-refresh .tabBar__133bf .addFriend__133bf.addFriend__133bf.addFriend__133bf {
    background-color: var(--mc);
}
.lookFilled__201d5.colorBrand__201d5:hover  {
    background-color: var(--mc) !important;
}
.lookFilled__201d5.colorBrand__201d5 {
    background-color: #fc868600; 
}

/* Colored Role Pills */
.role_dfa8b6.pill_dfa8b6 {
    position: relative;
    background: none;
    border: none;
    padding-left: 28px;
}

.role_dfa8b6.pill_dfa8b6 > span {
    z-index: 1;
}

.role_dfa8b6.pill_dfa8b6 .roleRemoveButton_dfa8b6 {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    margin: 0 !important;
}

.role_dfa8b6.pill_dfa8b6 .roleCircle__4f569 {
    margin: 6px 8px;
}

.role_dfa8b6.pill_dfa8b6 .roleCircle__4f569::before {
    content: '';
    display: block;
    position: absolute;
    background-color: inherit;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    border-radius: var(--radius-xs);
    filter: brightness(1.1);
    opacity: 0.25;
}

/*i'm new here, say hi!*/
[class*=newMemberBadge]:before {
    content: url(https://cdn.discordapp.com/emojis/1024751291504791654.gif?size=64&quality=lossless);
    transform: translate(-100%, -110%);
    display: inline-block;
    scale: 0.32;
}
.iconContainer_c00127 {
    content: url(https://cdn.discordapp.com/emojis/1024751291504791654.gif?size=64&quality=lossless);
    display: inline-block;
}
/* Channel Border Color */
.botTagRegular__82f07,.chipletContainerInner__4a25c,.modeSelected__2ea32 .link__2ea32, .modeSelected__2ea32:hover .link__2ea32 {
  border: 1px solid var(--mc);background: none;color: var(--mc);}
.modeUnreadImportant__2ea32 .icon__2ea32 ,.unselectable__4a25c, .modeSelected__2ea32 .icon__2ea32,.actionIcon_c69b6d {
  color: var(--mc) !important;}
  
/* Switches Color */
div[class^="control_"] > div[class^="container_"][class*="checked_"] {
  background-color: var(--mc) !important;
}
div[class^="vc-addon-card"] > div div[class^="container_"][class*="checked_"] {
  background-color: var(--mc) !important;
}
[class*="checked_"] > svg > svg > path { fill: var(--black) }
  

